--- a/package.json
+++ b/package.json
@@ -7,5 +7,6 @@
   "devDependencies": {
     "vite-plugin-vitepress-auto-nav": "^2.3.3",
     "vitepress": "^1.3.2"
-  }
+  },
+  "dependencies": {}
 }
